k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goauth-service
  namespace: goauth
  labels:
    app.kubernetes.io/name: goauth-server
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: goauth-server
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
